Act estructura HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Nav -->
 
-    <section class="section-nav">
+    <header class="header">
         <div class="nav-img">
             <img src="/GoldSweets/GoldSweets/imagenes/Gold_Sweets_Blanco.png" alt="" srcset="">
         </div>
@@ -22,18 +22,20 @@
         <nav class="nav">
             <ul>
                 <li>Inicio</li>
-                <li>Reserva</li>
-                <li>Galeria</li>
+                <li>Nosotros</li>
                 <li>Menu</li>
             </ul>
         </nav>
+    </header>
 
+    <!-- Home Section -->
+
+    <section  class="section">
+        <h1>Productos de calidad</h1>
+        <div class="home-btn">
+            <button>Comunicate con nosotros</button>
+        </div>
     </section>
-
-
-
-    <!-- Slider Section -->
-
 
     
 
