--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/GoldSweets/GoldSweets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>GoldSweets</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 
     <header class="header">
         <div class="nav-img">
-            <img src="/GoldSweets/GoldSweets/imagenes/Gold_Sweets_Blanco.png" alt="" srcset="">
+            <img src="/imagenes/Gold_Sweets_Blanco.png" alt="" srcset="">
         </div>
 
         <nav class="nav">
@@ -37,7 +37,21 @@
         </div>
     </section>
 
-    
+
+    <!-- About us Section -->
+
+    <section class="section-about">
+
+        <div class="info">
+            <h1>Mi Historia</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quidem quod doloribus asperiores quasi, minus minima exercitationem iure, illum nihil vero at fugiat. Blanditiis doloribus voluptatibus, repellendus libero est adipisci.</p>
+        </div>
+
+        <div class="section-img">
+            <img src="/imagenes/IMG_20211018_081404.jpg" alt="" srcset="">
+        </div>
+
+    </section>
 
 
 
