--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <div class="info">
             <h1>Mi Historia</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quidem quod doloribus asperiores quasi, minus minima exercitationem iure, illum nihil vero at fugiat. Blanditiis doloribus voluptatibus, repellendus libero est adipisci.</p>
+
+            <div class="info-btn">
+                <a href="#">Leer más</a>
+            </div>
+
         </div>
 
         <div class="section-img">
