Estructura final Version 1 Landing Page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <!-- Nav -->
 
     <header class="header">
+        
         <div class="nav-img">
             <img src="/Gold_Sweets_Blanco.png" alt="" srcset="">
         </div>
 
         <nav class="nav">
+
             <ul>
                 <li>Inicio</li>
                 <li>Nosotros</li>
@@ -31,7 +33,7 @@
     <!-- Home Section -->
 
     <section  class="section">
-        <h1>Productos de calidad</h1>
+        <h1>Productos de Calidad</h1>
         <div class="home-btn">
             <button>Comunicate con nosotros</button>
         </div>
@@ -74,7 +76,7 @@
         <div class="divs-label">  
             <img src="/IMG_20211011_174110.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Chocolate</h3>
+                <h3>Red Velvet</h3>
             </div>
         </div>
 
@@ -82,7 +84,7 @@
         <div class="divs-label">  
             <img src="/IMG_20211018_075306.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Chocolate</h3>
+                <h3>Chocolate y Nueces</h3>
             </div>
         </div>
 
@@ -90,14 +92,14 @@
         <div class="divs-label">  
             <img src="/IMG_20211018_075325.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Chocolate</h3>
+                <h3>Frutos Rojos/h3>
             </div>
         </div>
 
         <div class="divs-label">  
             <img src="/IMG_20211011_174638.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Chocolate</h3>
+                <h3>Limón</h3>
             </div>
         </div>
 
@@ -105,7 +107,7 @@
         <div class="divs-label">  
             <img src="/IMG_20211011_174137.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Chocolate</h3>
+                <h3>Vainilla</h3>
             </div>
         </div>
 
@@ -117,7 +119,7 @@
     <footer class="contact-section">
 
         <div class="section-img-contact">
-            <img src="/IMG_20211011_174110.jpg" alt="" srcset="">
+            <img src="/IMG_20211011_171145.jpg" alt="" srcset="">
         </div>
 
         <div class="social-media">
@@ -134,6 +136,33 @@
                 </a>
 
             </div>
+
+            <form  class="form">
+
+                <h2>Consultas</h2>
+
+                <div class="inputs">
+                    <input type="text" name="Nombre" id="" placeholder="Ingresa Tu Nombre">
+                </div>
+
+                <div class="inputs">
+                    <input type="email" name="Nombre" id="" placeholder="Ingresa Tu Email">
+                </div>
+
+                <div class="inputs">
+                    <input type="text" name="Nombre" id="" placeholder="Ingresa Tu Telefono">
+                </div>
+
+                <div class="inputs">
+                    <textarea name="" id="" cols="22" rows="4" placeholder="Danos tu Opinión"></textarea>
+                </div>
+
+                <div>
+                    <button type="submit">Enviar</button>
+                </div>
+
+                
+            </form>
 
         </div>
 
