ACT I. Agregando responsive

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="divs-label">  
             <img src="/IMG_20211018_075325.jpg" alt="" srcset="">
             <div class="labels">
-                <h3>Frutos Rojos/h3>
+                <h3>Frutos Rojos</h3>
             </div>
         </div>
 
