--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
         
         <nav>
             <div class="logo">
-                <h4>Logo</h4>
+                <div class="logo-img">
+                    <img src="/Gold_Sweets_Blanco.png" alt="">
+                </div>
             </div>
 
             <ul class="nav-links">
                 <li>
-                    <a href="">Inicio</a>
+                    <a href="#inicio">Inicio</a>
                 </li>
                 <li>
-                    <a href="">Nosotros</a>
+                    <a href="#nosotros">Nosotros</a>
                 </li>
                 <li>
-                    <a href="">Menú</a>
+                    <a href="#sabores">Menú</a>
                 </li>
                 <li>
-                    <a href="">Redes</a>
+                    <a href="#social-media">Redes</a>
                 </li>
             </ul>
 
