--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <textarea name="Comentarios" id="" cols="22" rows="4" placeholder="Danos Tu Opinión" pattern="^.{1,255}$" title="Tu Comentario no debe exceder los 255 caracteres"></textarea>
                 </div>
 
-                <div class="submit-btn" >
+                <div class="submit-btn inputs" >
                     <input type="submit" value="Enviar">
                 </div>
 
