--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <h2>Consultas</h2>
 
                 <div class="inputs">
-                    <input type="text" name="Nombre" id="" placeholder="Escribe Tu Nombre" title="Nombre sólo acepta letras y no acepta espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
+                    <input type="text" name="Nombre" id="" placeholder="Escribe Tu Nombre" title="Nombre sólo acepta letras y espacios en blanco" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" required>
                 </div>
 
                 <div class="inputs">
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="inputs">
-                    <input type="text" name="Teléfono" id="" placeholder="Escribe Tu Teléfono" title="Escribe tu numero sin guiones ni espacios" required>
+                    <input type="text" name="Teléfono" id="" placeholder="Escribe Tu Teléfono" title="Por favor, solo escribe el número sin guiones y espacios" pattern="^[0-9]{10,12}$" required>
                 </div>
 
                 <div class="inputs">
